--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body style="padding: 0px; margin: 0px;margin-top: 0px;margin-left: 0px;">
-  <img src="C:\Users\austi\OneDrive\Desktop\WhatsApp Image 2024-07-05 at 11.22.56_4e8c5edf.jpg">
+  <img src="https://github.com/danemonkey2004/MY-PROFILE/blob/main/WhatsApp%20Image%202024-07-05%20at%2011.22.56_4e8c5edf.jpg?raw=true">
 
   <div class="column1">
     <p>Student</p>
